--- a/static/css/index_mobile.css
+++ b/static/css/index_mobile.css
@@ -2,11 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
 
 
-@media print, screen and (max-width:600px){
+@media print, screen and (max-width:1200px){
 
   body {
     font-family: Arial, "メイリオ", sans-serif;
-    background-color: #202020;
+    background-color: #77a9aa;
     margin: 0;
     width:100%;
     padding-top:50px;
@@ -123,4 +123,14 @@
     padding:10px;
     margin:10px;
   }
+
+
+
+  .paragraph{
+    letter-spacing: 0.5px;
+    line-height: 14px;
+    font-size: 14px;
+    padding-bottom: 8px;
+    color:#08263a;
+}
 }
