--- a/static/css/index_pc.css
+++ b/static/css/index_pc.css
@@ -2,14 +2,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
 
 
-@media print, screen and (min-width: 600px){
+@media print, screen and (min-width: 1200px){
    
 html{
     height: 100%;
 }    
 body {
   font-family: Arial, "メイリオ", sans-serif;
-  background-color: #202020;
+  background-color:#77a9aa;
   margin: 0;
   width:100%;
   padding-top:50px;
@@ -127,5 +127,14 @@ footer{
   padding:30px;
 }
 
+
+.paragraph{
+    width:100%;
+    letter-spacing: 0.5px;
+    line-height: 14px;
+    font-size: 14px;
+    padding-bottom: 8px;
+    color:#08263a;
+}
 
 }
