--- a/static/css/index_mobile.css
+++ b/static/css/index_mobile.css
@@ -1,11 +1,9 @@
-@import url('https://fonts.googleapis.com/css?family=Vollkorn');
-@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap');
 
 @media print, screen and (max-width:1200px){
 
   body {
-    font-family: Arial, "メイリオ", sans-serif;
+    font-family: 'Zen Maru Gothic', sans-serif;
     background-color: #77a9aa;
     margin: 0;
     width:100%;
