--- a/static/css/index_pc.css
+++ b/static/css/index_pc.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Vollkorn');
-@import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@400;700&display=swap');
 
 @media print, screen and (min-width: 1200px){
    
@@ -8,7 +7,7 @@ html{
     height: 100%;
 }    
 body {
-  font-family: Arial, "メイリオ", sans-serif;
+  font-family: 'Zen Maru Gothic', sans-serif;
   background-color:#77a9aa;
   margin: 0;
   width:100%;
