--- a/static/css/index_mobile.css
+++ b/static/css/index_mobile.css
@@ -14,12 +14,18 @@
   
   header{
     width:100%;
-    height:50px;
-    background-color: orangered;
-    position: fixed;
-    top:0;
+  height:60px;
+  background-color: white;
+  position: fixed;
+  top:0;
   }
-  
+  .logo{
+    padding-top: 5px;
+}
+
+.bar{
+    z-index: 100;
+}
   
   
   /*menu*/
@@ -33,7 +39,7 @@
       cursor: pointer;/*カーソルを指の形に変更*/
   }
   .menu__line{
-      background: #fff;/*bar color*/
+      background: #0B7A6D;/*bar color*/
       display: block;/*https://saruwakakun.com/html-css/basic/display*/
       height: 2px;/*bar thickness*/
       position: absolute;/*絶対位置*/
@@ -49,21 +55,27 @@
           transition-duration: .1s;
   }
   .menu__line--top.active{
-      top: 8px;
-      transform: rotate(45deg);/*上の棒の挙動*/
-  }
-  .menu__line--center.active{
-      transform:scaleX(0);/*真ん中の棒の挙動*/
-  }
-  .menu__line--bottom.active{
-      bottom: 10px;
-      transform: rotate(135deg);/*下の棒の挙動*/
-  }
+    top: 8px;
+    transform: rotate(45deg);/*上の棒の挙動*/
+    background-color: #fff;
+}
+.menu__line--center.active{
+    transform:scaleX(0);/*真ん中の棒の挙動*/
+}
+.menu__line--bottom.active{
+    bottom: 10px;
+    transform: rotate(135deg);/*下の棒の挙動*/
+    background-color: #fff;
+}
+.bar.active{
+    background-color: #77a9aa;
+}
   /*gnav*/
   /*箱*/
   
   .gnav{
-      background: rgba(0,0,0,0.8);
+      background:#E3FFF6;
+      margin-top: 60px;
       height: 100%;
       display:none;
       width: 100%;
@@ -76,6 +88,8 @@
       display: flex;
       height: 100%;
       width: 100%;
+      line-height: 0.5;
+    }
   }
   
   .gnav__menu{
@@ -88,17 +102,17 @@
   }
   .gnav__menu__item{
       text-align: center;
-      margin-bottom: 30px;
+      margin-bottom: 70px;
   }
   .gnav__menu__item a{
-      color: #fff;
-      font-size: 2em;
+      color: #77A9AA;
+      font-size: 1.3em;
       font-weight: bold;
       text-decoration: none;
       transition:.5s;/*黒く変わるまで*/
   }
   .gnav__menu__item a:hover{
-      color: #525252
+      color: #fff
   }
 
   footer{
@@ -123,4 +137,4 @@
     padding:10px;
     margin:10px;
   }
-}
+
