--- a/static/css/index_pc.css
+++ b/static/css/index_pc.css
@@ -18,13 +18,19 @@ body {
 
 header{
   width:100%;
-  height:50px;
-  background-color: orangered;
+  height:60px;
+  background-color: white;
   position: fixed;
   top:0;
 }
 
+.logo{
+    padding-top: 5px;
+}
 
+.bar{
+    z-index: 100;
+}
 
 /*menu*/
 .menu{
@@ -37,7 +43,7 @@ header{
     cursor: pointer;/*カーソルを指の形に変更*/
 }
 .menu__line{
-    background: #fff;/*bar color*/
+    background: #0B7A6D;/*bar color*/
     display: block;/*https://saruwakakun.com/html-css/basic/display*/
     height: 2px;/*bar thickness*/
     position: absolute;/*絶対位置*/
@@ -55,6 +61,7 @@ header{
 .menu__line--top.active{
     top: 8px;
     transform: rotate(45deg);/*上の棒の挙動*/
+    background-color: #fff;
 }
 .menu__line--center.active{
     transform:scaleX(0);/*真ん中の棒の挙動*/
@@ -62,13 +69,18 @@ header{
 .menu__line--bottom.active{
     bottom: 10px;
     transform: rotate(135deg);/*下の棒の挙動*/
+    background-color: #fff;
+}
+.bar.active{
+    background-color: #77a9aa;
 }
 /*gnav*/
 /*箱*/
 
 .gnav{
-    background: rgba(0,0,0,0.8);
-    height: 100%;
+    background: #E3FFF6;
+    margin-top: 60px;
+    height:100%;
     display:none;
     width: 100%;
     z-index: 98;
@@ -80,6 +92,7 @@ header{
     display: flex;
     height: 100%;
     width: 100%;
+    line-height: 0.5;
 }
 
 .gnav__menu{
@@ -92,18 +105,20 @@ header{
 }
 .gnav__menu__item{
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 70px;
+    
 }
 .gnav__menu__item a{
-	  color: #fff;
-    font-size: 2em;
+	  color: #0B7A6D;
+    font-size: 1.3em;
     font-weight: bold;
 	  text-decoration: none;
     transition:.5s;/*黒く変わるまで*/
 }
 .gnav__menu__item a:hover{
-    color: #525252
+    color: #fff
 }
+
 
 footer{
   width:100%;
