--- a/static/css/index_pc.css
+++ b/static/css/index_pc.css
@@ -217,6 +217,125 @@ header{
     color:#08263a;
 }
 
+.section-title1{
+  position: relative;
+  height:100px;
+  width:250px;
+}
+
+.section1-img{
+  height:90%;
+}
+
+.section1-text{
+position: absolute;
+top:35%;
+left:10%;
+font-size:27px;
+font-weight: 700;
+}
+
+.section-title2{
+  position: relative;
+  height:100px;
+  width:250px;
+}
+
+.section2-img{
+  height:90%;
+}
+
+.section2-text{
+position: absolute;
+top:35%;
+left:13%;
+font-size:27px;
+font-weight: 700;
+}
+
+
+
+.blocktitle-green{
+  margin-bottom: 16px;
+  margin-left: 8px;
+  position: relative;
+  display: inline;
+  margin: 0 auto;
+  font-size: 24px;
+}
+.blocktitle-green::after{
+  content: '';
+  position: absolute;
+  left: -5px;
+  bottom: -4px; /*下線の上下位置調整*/
+  display: inline-block;
+  width: calc(100% + 5px); /*下線の幅*/
+  height: 3px; /*下線の太さ*/
+  background-color: #77a9aa; /*下線の色*/
+  border-radius: 2px;
+}
+.blocktitle-yellow{
+  margin-bottom: 16px;
+  margin-left: 8px;
+  position: relative;
+  display: inline;
+  margin: 0 auto;
+  font-size: 24px;
+}
+.blocktitle-yellow::after {
+  content: '';
+  position: absolute;
+  left: -5px;
+  bottom: -4px; /*下線の上下位置調整*/
+  display: inline-block;
+  width: calc(100% + 5px); /*下線の幅*/
+  height: 3px; /*下線の太さ*/
+  background-color: #f7d494; /*下線の色*/
+  border-radius: 2px;
+  
+}
+  
+
+.blocktitle-pink{
+  margin-bottom: 16px;
+  margin-left: 8px;
+  position: relative;
+  display: inline;
+  margin: 0 auto;
+  font-size: 24px;
+}
+.blocktitle-pink::after{
+  content: '';
+  position: absolute;
+  left: -5px;
+  bottom: -4px; /*下線の上下位置調整*/
+  display: inline-block;
+  width: calc(100% + 5px); /*下線の幅*/
+  height: 3px; /*下線の太さ*/
+  background-color: #f7c4c6; /*下線の色*/
+  border-radius: 2px;
+}
+
+.blocktitle-navy{
+  margin-bottom: 16px;
+  margin-left: 8px;
+  position: relative;
+  display: inline;
+  margin: 0 auto;
+  font-size: 24px;
+}
+.blocktitle-navy::after{
+  content: '';
+  position: absolute;
+  left: -5px;
+  bottom: -4px; /*下線の上下位置調整*/
+  display: inline-block;
+  width: calc(100% + 5px); /*下線の幅*/
+  height: 3px; /*下線の太さ*/
+  background-color: #566c7d; /*下線の色*/
+  border-radius: 2px;
+}
+
 /*hero青*/
 .heroblue{
   position: relative;
