--- a/static/css/index_mobile.css
+++ b/static/css/index_mobile.css
@@ -13,7 +13,7 @@
   header{
   width:100%;
   height:60px;
-  background-color: white;
+  background-color: #E3FFF6;
   position: fixed;
   top:0;
   }
@@ -207,6 +207,41 @@
     font-weight: 400;
     color:#08263a;
  }
+/*スライド*/
+.slider {
+  width: 300px;
+  height: 200px;
+  overflow: hidden;
+  margin: 0 auto;
+  border-radius: 40px;
+
+}
+.slider-item {
+  width: 300px;
+  float: left;
+}
+.slider-item img{
+  width:100%;
+}
+.slider-inner {
+  width: 300%;
+  animation: slider 10s infinite ease;
+}
+
+@keyframes slider {
+	0% {
+	transform: translateX(0);
+	}
+	33% {
+	transform: translateX(-300px);
+	}
+	66% {
+	transform: translateX(-600px);
+	}
+	100% {
+	transform: translateX(0);
+	}
+}
   
  /*squarelink　ピンク*/
 *,
@@ -498,46 +533,4 @@
   a.btn-border-shadow--color-red:before {
     border-radius: 20px;
   }
-
-/*hero青*/
-.heroblue{
-    position: relative;
-}
-.herophoto{
-    width: 100%;
-}
-
-.heroblue p {
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%,-50%);
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-    margin:0;
-    padding:0;
-    font-size: 5vw;
-    font-weight: bold;
-}
-
-/*hero白*/
-.herowhite{
-    position: relative;
-}
-.herophoto{
-    width: 100%;
-}
-
-.herowhite p {
-    position:absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%,-50%);
-    -webkit-transform: translate(-50%,-50%);
-    transform: translate(-50%,-50%);
-    margin:0;
-    padding:0;
-    font-size: 5vw;
-    font-weight: bold;
-}
 }
