heroの文字色修正

--- a/static/css/index_mobile.css
+++ b/static/css/index_mobile.css
@@ -635,6 +635,7 @@ font-weight: 700;
     padding:0;
     font-size: 5vw;
     font-weight: bold;
+    color: #08263A;
 }
 
 /*hero白*/
@@ -656,5 +657,6 @@ font-weight: 700;
     padding:0;
     font-size: 5vw;
     font-weight: bold;
+    color: #08263A;
 }
 }
