--- a/static/css/index_pc.css
+++ b/static/css/index_pc.css
@@ -354,6 +354,7 @@ margin:0;
 padding:0;
 font-size: 5vw;
 font-weight: bold;
+color: #08263A;
 }
 /*hero白*/
 .herowhite{
@@ -374,6 +375,7 @@ font-weight: bold;
   padding:0;
   font-size: 5vw;
   font-weight: bold;
+  color: #08263A;
 }
 
 
