--- a/static/css/index_mobile.css
+++ b/static/css/index_mobile.css
@@ -541,6 +541,42 @@
     font-size: 5vw;
     font-weight: bold;
 }
+
+.section-title1{
+  position: relative;
+  height:100px;
+  width:250px;
+}
+
+.section1-img{
+  height:90%;
+}
+
+.section1-text{
+position: absolute;
+top:43%;
+left:10%;
+font-size:20px;
+font-weight: 700;
+}
+
+.section-title2{
+  position: relative;
+  height:100px;
+  width:250px;
+}
+
+.section2-img{
+  height:90%;
+}
+
+.section2-text{
+position: absolute;
+top:43%;
+left:13%;
+font-size:20px;
+font-weight: 700;
+}
 }
 
 
